--- a/chsr/Assembly-CSharp.csproj
+++ b/chsr/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Field\Scripts\CameraScript.cs" />
      <Compile Include="Assets\Field\Scripts\Fieldfactory.cs" />
      <Compile Include="Assets\Field\Scripts\FieldManager.cs" />
      <Compile Include="Assets\Field\Scripts\MapData.cs" />
@@ -89,46 +90,46 @@
      <None Include="Assets\UnityChan\Models\UnityChanShader\Shader\Unitychan_chara_hada.shader" />
      <None Include="Assets\UnityChan\Models\UnityChanShader\Shader\Unitychan_chara_hada_blend.shader" />
  <Reference Include="Unity.Timeline.Editor">
- <HintPath>C:/Users/parke/Desktop/Show-CHaser-on-Unity-Schon--develop/Show-CHaser-on-Unity-Schon--develop/chsr/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+ <HintPath>C:/Users/parke/vagrant/ubuntu64_16/workspace/Show-CHaser-on-Unity-Schon-/chsr/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
  <Reference Include="com.unity.multiplayer-hlapi.Editor">
- <HintPath>C:/Users/parke/Desktop/Show-CHaser-on-Unity-Schon--develop/Show-CHaser-on-Unity-Schon--develop/chsr/Library/ScriptAssemblies/com.unity.multiplayer-hlapi.Editor.dll</HintPath>
+ <HintPath>C:/Users/parke/vagrant/ubuntu64_16/workspace/Show-CHaser-on-Unity-Schon-/chsr/Library/ScriptAssemblies/com.unity.multiplayer-hlapi.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.TextMeshPro.Editor">
- <HintPath>C:/Users/parke/Desktop/Show-CHaser-on-Unity-Schon--develop/Show-CHaser-on-Unity-Schon--develop/chsr/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+ <HintPath>C:/Users/parke/vagrant/ubuntu64_16/workspace/Show-CHaser-on-Unity-Schon-/chsr/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.PackageManagerUI.Editor">
- <HintPath>C:/Users/parke/Desktop/Show-CHaser-on-Unity-Schon--develop/Show-CHaser-on-Unity-Schon--develop/chsr/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
+ <HintPath>C:/Users/parke/vagrant/ubuntu64_16/workspace/Show-CHaser-on-Unity-Schon-/chsr/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Timeline">
- <HintPath>C:/Users/parke/Desktop/Show-CHaser-on-Unity-Schon--develop/Show-CHaser-on-Unity-Schon--develop/chsr/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+ <HintPath>C:/Users/parke/vagrant/ubuntu64_16/workspace/Show-CHaser-on-Unity-Schon-/chsr/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
  </Reference>
  <Reference Include="Unity.CollabProxy.Editor">
- <HintPath>C:/Users/parke/Desktop/Show-CHaser-on-Unity-Schon--develop/Show-CHaser-on-Unity-Schon--develop/chsr/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+ <HintPath>C:/Users/parke/vagrant/ubuntu64_16/workspace/Show-CHaser-on-Unity-Schon-/chsr/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
  </Reference>
  <Reference Include="com.unity.multiplayer-weaver.Editor">
- <HintPath>C:/Users/parke/Desktop/Show-CHaser-on-Unity-Schon--develop/Show-CHaser-on-Unity-Schon--develop/chsr/Library/ScriptAssemblies/com.unity.multiplayer-weaver.Editor.dll</HintPath>
+ <HintPath>C:/Users/parke/vagrant/ubuntu64_16/workspace/Show-CHaser-on-Unity-Schon-/chsr/Library/ScriptAssemblies/com.unity.multiplayer-weaver.Editor.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.XR.LegacyInputHelpers">
- <HintPath>C:/Users/parke/Desktop/Show-CHaser-on-Unity-Schon--develop/Show-CHaser-on-Unity-Schon--develop/chsr/Library/ScriptAssemblies/UnityEngine.XR.LegacyInputHelpers.dll</HintPath>
+ <HintPath>C:/Users/parke/vagrant/ubuntu64_16/workspace/Show-CHaser-on-Unity-Schon-/chsr/Library/ScriptAssemblies/UnityEngine.XR.LegacyInputHelpers.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.SpatialTracking">
- <HintPath>C:/Users/parke/Desktop/Show-CHaser-on-Unity-Schon--develop/Show-CHaser-on-Unity-Schon--develop/chsr/Library/ScriptAssemblies/UnityEditor.SpatialTracking.dll</HintPath>
+ <HintPath>C:/Users/parke/vagrant/ubuntu64_16/workspace/Show-CHaser-on-Unity-Schon-/chsr/Library/ScriptAssemblies/UnityEditor.SpatialTracking.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.SpatialTracking">
- <HintPath>C:/Users/parke/Desktop/Show-CHaser-on-Unity-Schon--develop/Show-CHaser-on-Unity-Schon--develop/chsr/Library/ScriptAssemblies/UnityEngine.SpatialTracking.dll</HintPath>
+ <HintPath>C:/Users/parke/vagrant/ubuntu64_16/workspace/Show-CHaser-on-Unity-Schon-/chsr/Library/ScriptAssemblies/UnityEngine.SpatialTracking.dll</HintPath>
  </Reference>
  <Reference Include="Unity.TextMeshPro">
- <HintPath>C:/Users/parke/Desktop/Show-CHaser-on-Unity-Schon--develop/Show-CHaser-on-Unity-Schon--develop/chsr/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+ <HintPath>C:/Users/parke/vagrant/ubuntu64_16/workspace/Show-CHaser-on-Unity-Schon-/chsr/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Analytics.DataPrivacy">
- <HintPath>C:/Users/parke/Desktop/Show-CHaser-on-Unity-Schon--develop/Show-CHaser-on-Unity-Schon--develop/chsr/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
+ <HintPath>C:/Users/parke/vagrant/ubuntu64_16/workspace/Show-CHaser-on-Unity-Schon-/chsr/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.XR.LegacyInputHelpers">
- <HintPath>C:/Users/parke/Desktop/Show-CHaser-on-Unity-Schon--develop/Show-CHaser-on-Unity-Schon--develop/chsr/Library/ScriptAssemblies/UnityEditor.XR.LegacyInputHelpers.dll</HintPath>
+ <HintPath>C:/Users/parke/vagrant/ubuntu64_16/workspace/Show-CHaser-on-Unity-Schon-/chsr/Library/ScriptAssemblies/UnityEditor.XR.LegacyInputHelpers.dll</HintPath>
  </Reference>
  <Reference Include="com.unity.multiplayer-hlapi.Runtime">
- <HintPath>C:/Users/parke/Desktop/Show-CHaser-on-Unity-Schon--develop/Show-CHaser-on-Unity-Schon--develop/chsr/Library/ScriptAssemblies/com.unity.multiplayer-hlapi.Runtime.dll</HintPath>
+ <HintPath>C:/Users/parke/vagrant/ubuntu64_16/workspace/Show-CHaser-on-Unity-Schon-/chsr/Library/ScriptAssemblies/com.unity.multiplayer-hlapi.Runtime.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.AIModule">
  <HintPath>D:/Unity/2019.1.6f1/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -314,13 +315,13 @@
  <HintPath>D:/Unity/2019.1.6f1/Editor/Data/UnityExtensions/Unity/TestRunner/net35/unity-custom/nunit.framework.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Analytics.Editor">
- <HintPath>C:/Users/parke/Desktop/Show-CHaser-on-Unity-Schon--develop/Show-CHaser-on-Unity-Schon--develop/chsr/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
+ <HintPath>C:/Users/parke/vagrant/ubuntu64_16/workspace/Show-CHaser-on-Unity-Schon-/chsr/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Analytics.StandardEvents">
- <HintPath>C:/Users/parke/Desktop/Show-CHaser-on-Unity-Schon--develop/Show-CHaser-on-Unity-Schon--develop/chsr/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
+ <HintPath>C:/Users/parke/vagrant/ubuntu64_16/workspace/Show-CHaser-on-Unity-Schon-/chsr/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Analytics.Tracker">
- <HintPath>C:/Users/parke/Desktop/Show-CHaser-on-Unity-Schon--develop/Show-CHaser-on-Unity-Schon--develop/chsr/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
+ <HintPath>C:/Users/parke/vagrant/ubuntu64_16/workspace/Show-CHaser-on-Unity-Schon-/chsr/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
  </Reference>
  <Reference Include="mscorlib">
  <HintPath>D:/Unity/2019.1.6f1/Editor/Data/MonoBleedingEdge/lib/mono/4.7.1-api/mscorlib.dll</HintPath>
